# tf-software-basico

./: .gitignore  CMakeLists.txt  Makefile.mk  app1.c  app2.c  app2.output  app3.c  app3.output  atores.c  atores.h  cinemas.c  cinemas.h  cinemas.txt.out  filmes.c  filmes.h  main.c  makefile  programacao.c  programacao.h  terminal.txt
